<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="205dp"
        app:cardCornerRadius="20dp"
        android:focusable="true"
        app:cardElevation="5dp"
        android:animateLayoutChanges="true"
        app:cardUseCompatPadding="true"
        android:layout_margin="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:background="@drawable/border_desing"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_historyid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textStyle="normal"
                android:textColor="@android:color/background_dark"
                android:textAllCaps="true"

                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.93"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.050000012" />

            <TextView
                android:id="@+id/text_historydate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/date"
                android:textAllCaps="true"
                android:textColor="@android:color/background_dark"
                android:textSize="12sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@+id/text_historyid"
                app:layout_constraintEnd_toStartOf="@+id/text_historyid"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_historyammount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/amount"
                android:textStyle="normal"
                android:textColor="@android:color/background_dark"
                android:textAllCaps="true"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_historydate"
                app:layout_constraintVertical_bias="0.13" />

            <TextView
                android:id="@+id/text_historyInclude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/include"
                android:textStyle="normal"
                android:textColor="@android:color/background_dark"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAllCaps="true"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_historyammount"
                app:layout_constraintVertical_bias="0.25" />

            <Button
                android:id="@+id/button_historybutton"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:background="@drawable/b1"
                android:layout_margin="4dp"
                android:ems="8"
                android:padding="8dp"
                android:text="@string/view"
                android:textColor="@android:color/background_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_historyInclude" />


            <Button
                android:id="@+id/button_add"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:background="@drawable/b1"
                android:layout_margin="4dp"
                android:ems="8"
                android:padding="8dp"
                android:text="Add"
                android:textColor="@android:color/background_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_historyInclude" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>